# CloudCompare-PythonRuntime

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CloudCompare-PythonPlugin.qrc  CloudCompare-PythonRuntime.qrc  Contributors.md  Dockerfile-Debug  Dockerfile-Release  PythonPlugin.qrc  Readme.md  activate.ps1  building.html  cmake-format.yaml  examples.html  genindex.html  getting_started.html  helpers.cmake  index.html  info.json  objects.inv  plugin.py  requirements-dev.txt  requirements-release.txt  script.py  search.html  searchindex.js  tasks.py
.doctrees/: building.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree
QCodeEditor/: CMakeLists.txt
_images/: inheritance-30670d02d61afb23e3bee513b377c848fed79aab.png.map  inheritance-38994e291c49db8b1b8035fea3115cad9e7a2a56.png.map  inheritance-49978bb303db2b04904e9181faa696a8c76e5925.png.map  inheritance-84a2671a866ffab21036cd24ae1e99082c4ee8e3.png.map  inheritance-ca2e6368c49ed84156621a1dadbe2e3b5e4755fc.png.map  inheritance-ff1adfff7c5ce31179bb6d6c7aaae20961e946d8.png.map
_sources/: building.rst.txt  examples.rst.txt  getting_started.rst.txt  index.rst.txt
_static/: style.css
cccorelib/: data_structures.html  index.html  others.html  tools.html
cmake/: CloudCompareVariables.cmake  CompilerWarnings.cmake  Helpers.cmake  (+2 more)
script_examples/plugin_examples/cloudcompare-demo-plugin/: README.md  pyproject.toml
script_examples/plugin_examples/cloudcompare-demo-plugin/src/cloudcompare_demo_plugin/: hello.py
src/: AboutDialog.cpp  AboutDialog.h  ActionA.cpp  CMakeLists.txt  ColorScheme.cpp  ColorScheme.h  FileRunner.cpp  FileRunner.h  PackageManager.cpp  PackageManager.h  PythonActionLauncher.cpp  PythonActionLauncher.h  PythonConfig.cpp  PythonConfig.h  PythonHighlighter.cpp  PythonHighlighter.h  PythonHighlighterSettings.cpp  PythonInterpreter.cpp  PythonInterpreter.h  PythonPlugin.cpp  PythonPlugin.h  PythonPluginManager.cpp  PythonPluginManager.h  PythonPluginSettings.cpp  PythonPluginSettings.h  PythonRepl.cpp  PythonRepl.h  PythonRuntimeSettings.cpp  PythonRuntimeSettings.h  PythonStdErrOutRedirect.h  QPythonREPL.cpp  QPythonRepl.cpp  Resources.h  Runtime.cpp  Utilities.h  WaitingSpinnerWidget.cpp  WaitingSpinnerWidget.h  ccGUIPythonInstance.cpp  ccGuiPythonInstance.cpp
src/CodeEditor/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  EditorSettings.cpp  EditorSettings.h  ProjectView.h  ProjectViewContextMenu.cpp  ProjectViewContextMenu.h  PythonEditor.cpp  PythonEditor.h
src/Runtime/: CMakeLists.txt  Consoles.h  Runtime.cpp  Runtime.h  Threading.h  ccCommandLine.cpp  ccGuiPythonInstance.cpp  ccGuiPythonInstance.h  ccPickingHub.cpp
src/Ui/: AboutDialog.ui  ActionLauncher.ui  CMakeLists.txt  EditorSettings.ui  FileRunner.ui  InstallDialog.ui  PackageManager.ui  PathVariableEditor.ui  PythonEditor.ui  PythonPluginSettings.ui  PythonPluginSettings.ui.autosave  PythonREPL.ui  PythonRuntimeSettings.ui
wrapper/: CMakeLists.txt
wrapper/cccorelib/: .clang-format  .gitignore  CMakeLists.txt  Readme.md  setup.py
wrapper/cccorelib/cccorelib/: __init__.py  cccorelib.pyi
wrapper/cccorelib/src/: AutoSegmentationTools.cpp  BoundingBox.cpp  CCConst.cpp  CCGeom.cpp  CCMath.cpp  CCMiscTools.cpp  CCShareable.cpp  CMakeLists.txt  ChamferDistanceTransform.cpp  CloudSamplingTools.cpp  Delaynay2dMesh.cpp  DgmOctree.cpp  DgmOctreeReferenceCloud.cpp  DistanceComputationTools.cpp  ErrorFunction.cpp  FastMarching.cpp  GenericCloud.cpp  GenericDistribution.cpp  GenericIndexedCloud.cpp  GenericIndexedCloudPersist.cpp  GenericIndexedMesh.cpp  GenericMesh.cpp  GenericOctree.cpp  GenericProgressCallback.cpp  GenericTriangle.cpp  GeometricalAnalysisTools.cpp  Jacobi.cpp  KdTree.cpp  LocalModel.cpp  ManualSegmentationTools.cpp  MeshSamplingTools.cpp  Neighbourhood.cpp  NormalDistribution.cpp  PointCloud.cpp  PointProjectionTools.cpp  Polyline.cpp  ReferenceCloud.cpp  RegistrationTools.cpp  ScalarField.cpp  ScalarFieldTools.cpp  (+10 more)
wrapper/cccorelib/tests/: test_cccorelib.py  test_ccgeoms.py  test_jacobi.py  test_mesh_sampling_tools.py  test_neighbourhood.py  test_scalar_field.py  test_scalarfieldtools.py  test_square_matrix.py
wrapper/pycc/: CMakeLists.txt  pyproject.toml  setup.py
wrapper/pycc/plugins/: CMakeLists.txt
wrapper/pycc/plugins/m3c2/: CMakeLists.txt  m3c2.cpp
wrapper/pycc/pycc/: __init__.py  plugins.py
wrapper/pycc/src/: CMakeLists.txt  PyPrintLogger.cpp  PyPrintLogger.h  casters.h  cc2DLabel.cpp  ccBox.cpp  ccCommandLine.cpp  ccCone.cpp  ccCylinder.cpp  ccDish.cpp  ccDrawableObject.cpp  ccGLMatrix.cpp  ccGLWindow.cpp  ccGUIPythonInstance.cpp  ccGenericGLDisplay.cpp  ccGenericMesh.cpp  ccGenericPointCloud.cpp  ccGenericPrimitive.cpp  ccInteractor.cpp  ccLog.cpp  ccObject.cpp  ccPlane.cpp  ccPointCloud.cpp  ccProgressDialog.cpp  ccScalarField.cpp  ccSphere.cpp  ccTorus.cpp  load_plugins.cpp  pycc.cpp  threading.h
wrapper/pycc/src/qcc_db/: CMakeLists.txt  cc2DLabel.cpp  ccBBox.cpp  ccBox.cpp  ccCameraSensor.cpp  ccColorScale.cpp  ccColorScalesManager.cpp  ccCone.cpp  ccCylinder.cpp  ccDisc.cpp  ccDish.cpp  ccDrawableObject.cpp  ccGBLSensor.cpp  ccGLMatrix.cpp  ccGLWindow.cpp  ccGLWindowInterface.cpp  ccGenericGLDisplay.cpp  ccGenericMesh.cpp  ccGenericPointCloud.cpp  ccGenericPrimitive.cpp  ccIndexedTransformation.cpp  ccInteractor.cpp  ccLog.cpp  ccMesh.cpp  ccNormalVectors.cpp  ccObject.cpp  ccPlane.cpp  ccPointCloud.cpp  ccPolyline.cpp  ccProgressDialog.cpp  ccQuadric.cpp  ccRasterGrid.cpp  ccScalarField.cpp  ccSensor.cpp  ccSphere.cpp  ccSubMesh.cpp  ccTorus.cpp  ccViewPortParameters.cpp  ccViewportObject.cpp  ccWaveform.cpp  (+1 more)
wrapper/pycc/src/qcc_io/: CMakeLists.txt  qcc_io.cpp
wrapper/pycc/src/runtime/: CMakeLists.txt  ccCommandLine.cpp  ccGUIPythonInstance.cpp  runtime.cpp  threading.h
wrapper/pycc/tests/: test_camera_sensor.py  test_cc_gl_matrix.py  test_cc_hobject.py  test_cc_mesh.py  test_cc_point_cloud.py  test_file_io.py  test_plugins.py  test_primitives.py  test_sensor.py
wrapper/src/: cccorelib.cpp  library.cpp  pycc.cpp  wrappers.h
(+199 files in other folders)
